Add ville in tab_maregraphe_metz

--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -54,7 +54,7 @@
         <td>{{i.longitude}}</td>
         <td>
           <div class="bouton">
-            <a href="tabMaregrapheMeta/{{i.id_tdb}}"><button class="acceder" type="button">Accéder</button></a>
+            <a href="tabMaregrapheMeta/{{i.id_tdb}}/{{i.libelle}}"><button class="acceder" type="button">Accéder</button></a>
 
 <!-------------------- Formulaire de modification d'un marégraphe -------------------->
 
