--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -10,6 +10,7 @@
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
     
     <p class="infos_maregraphe">Identifiant du marégraphe : {{id_maregraphe}}</p>
+    <p class="infos_maregraphe">Ville : {{ville_maregraphe}}</p>
     <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
 
     <div class="fond_form" id="hide_form">
