--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -15,15 +15,22 @@
 .bouton_retour{
     background-color: white;
     color: black;
-    display: inline-block;
     border-radius: 6px;
     border-color: #C4C3C3;
     text-align: center;
     font-size: 14px;
-    padding: 10px;
     width: 100px;
     cursor: pointer;
     margin: 2.5px;
     border: 2px solid #C4C3C3;
+    
+    display: flex;
+    padding: 10px;
+    gap: 10px;
+    position: relative;
+    left: 65%;
+}
+
+a{
     text-decoration: none;
 }
