add retour page maregraphes

--- a/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.html
+++ b/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.html
@@ -54,7 +54,7 @@
         <td><a href={{i.url}} target="_blank">{{i.url}}</a></td>
         <td>
           <div class="bouton">
-            <a href="tabPartenaireMaregraphe/{{i.id}}"><button class="acceder" type="button">Accéder</button></a>
+            <a href="tabPartenaireMaregraphe/{{i.id}}/{{i.nom}}"><button class="acceder" type="button">Accéder</button></a>
 
 <!-------------------- Formulaire de modification d'un marégraphe -------------------
 
