--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -8,10 +8,17 @@
     Chargement des données ...
    </div>
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
+    <div class="entete_page">
+      <p class="infos_maregraphe">Identifiant du marégraphe : {{id_maregraphe}}</p>
+      <p class="infos_maregraphe">Ville : {{ville_maregraphe}}</p>
+      <a href="tabChoixMaregraphe"><button class="bouton_retour">Retourner aux marégraphes</button></a>
+      <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
+    </div>
+ 
+        
+
     
-    <p class="infos_maregraphe">Identifiant du marégraphe : {{id_maregraphe}}</p>
-    <p class="infos_maregraphe">Ville : {{ville_maregraphe}}</p>
-    <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
+    
 
     <div class="fond_form" id="hide_form">
       <div class="form_add_meta">
