--- a/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
+++ b/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
@@ -9,7 +9,12 @@
    </div>
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
 
-    <a href="tabChoixPartenaire"><button class="bouton_retour">Retourner aux partenaires</button></a>
+    <div class="section_trois_cases">
+      <div></div>
+      <div><p class="infos_partenaire">Identifiant du partenaire : {{id}}</p>
+        <p class="infos_partenaire">partenaire : {{partenaire}}</p></div>
+      <div class="retour_partenaires"><a href="tabChoixPartenaire"><button class="bouton_retour">Retourner aux partenaires</button></a></div>
+    </div>
   <!--
     <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
 
