--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
@@ -38,7 +38,7 @@
 <table>    
   <thead>
     <tr>
-      <th (click)="sort('id')">ID Métadonnées</th>
+      <th (click)="sort('id')">ID Métadonnées {{triangleData['id']}}</th>
       <th>Description</th>
       <th class="Actions">Actions</th>
     </tr>
