add modif formulaires des marégraphes

--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -64,7 +64,7 @@
           
           <div class="fond_form" id="hide_form_modif">
             
-            <div class="form_add_meta">
+            <div class="form_modif_meta">
               
               <span class="close-button" (click)="annuler_modif()">&times;</span>
               <h2>Modifier les informations du marégraphe</h2>
