ajout style sur formulaire d'ajout/modif meta

--- a/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.css
+++ b/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.css
@@ -15,6 +15,10 @@
     display:none;
 }
 
+.lien_site{
+    color: black;
+}
+
 .fond_form{
     display: none;
     position: fixed; /* Positionné par rapport à la fenêtre */
