--- a/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.html
+++ b/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.html
@@ -51,7 +51,7 @@
         <td>{{i.id}}</td>
         <td>{{i.nom}}</td>
         <td><img class="logos" src="https://services.data.shom.fr/static/logo/DDM/{{i.logo}}"></td>
-        <td><a href={{i.url}} target="_blank">{{i.url}}</a></td>
+        <td><a class="lien_site" href={{i.url}} target="_blank">{{i.url}}</a></td>
         <td>
           <div class="bouton">
             <a href="tabPartenaireMaregraphe/{{i.id}}/{{i.nom}}"><button class="acceder" type="button">Accéder</button></a>
