--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
@@ -13,8 +13,8 @@
 <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
 
 
-<div class="fond_form" id="hide_form">
-  <div class="form_add_meta">
+<div class="fond_form" id="hide_form_add">
+  <div class="form_meta">
     <span class="close-button" (click)="annuler()">&times;</span>
     <h2>Ajouter une métadonnée</h2>
     <form [formGroup]="formAddMeta">
@@ -58,7 +58,7 @@
 </table>
 <div class="fond_form" id="hide_form_modif">
               
-  <div class="form_add_meta">
+  <div class="form_meta">
     
     <span class="close-button">&times;</span>
     <h2>Modifier les informations du marégraphe</h2>
