--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -58,7 +58,7 @@
 
 <!-------------------- Formulaire de modification d'un marégraphe -------------------->
 
-            <button class="editer" type="button" (click)="show_modif_maregraphe()">Editer</button>
+            <button class="editer" type="button" (click)="show_modif_maregraphe(i.id_tdb, i.libelle, i.latitude, i.longitude)">Editer</button>
           </div>
 
           
@@ -69,21 +69,21 @@
               <span class="close-button" (click)="annuler_modif()">&times;</span>
               <h2>Modifier les informations du marégraphe</h2>
         
-              <form>    
+              <form [formGroup]="formModifMaregraphe">    
                 <label for="id_maregraphe">Identifiant du marégraphe : </label>
-                <input type="text" id="id_maregraphe" name="id_maregraphe" placeholder="Identifiant du marégraphe"><br><br>
+                <input type="number" id="id_maregraphe" readonly="readonly" formControlName="id_maregraphe"><br><br>
 
                 <label for="ville">Ville : </label>
-                <input type="text" id="ville" name="ville" placeholder="Nom de la ville"><br><br>
+                <input type="text" id="ville" formControlName="ville"><br><br>
       
                 <label for="latitude">Latitude : </label>
-                <input type="number" id="latitude" name="latitude" placeholder="Latitude du marégraphe"><br><br>
+                <input type="number" id="latitude" formControlName="latitude"><br><br>
       
                 <label for="longitude">Longitude : </label>
-                <input type="number" id="longitude" name="longitude" placeholder="Longitude du marégraphe"><br><br>
+                <input type="number" id="longitude" formControlName="longitude"><br><br>
               </form>
               <div class="bouton">
-                <button class="ajout_meta"  type="submit">Mettre à jour</button>
+                <button class="ajout_meta"  type="submit" (click)="update_maregraphe()">Mettre à jour</button>
                 <button class="supp_meta" id="supp_meta" type="delete"  (click)="annuler_modif()">Annuler</button>
               </div>
 <!---------------------------------------------------------------------------->     
