--- a/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
+++ b/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
@@ -10,8 +10,8 @@
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
 
     <div class="entete_page">
-      <p class="infos_partenaire">Identifiant du partenaire : {{id}}</p>
-      <p class="infos_partenaire">Partenaire : {{partenaire}}</p>
+      <p class="infos_page">Identifiant du partenaire : {{id}}</p>
+      <p class="infos_page">Partenaire : {{partenaire}}</p>
       <div class="button_header">
         <a href="tabChoixPartenaire"><button class="bouton_retour">Retour</button></a>
         <button class="Ajouter" id="Ajouter"  type="button" > <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
