--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
@@ -1,51 +1,21 @@
-.rectangle{
-    background-color: #E2DDDD;
-    padding-left: 1%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    border-radius: 3px;
-    font-size: 25px;
-}
-
-.affiche{
-    display: block;
-}
-
-.invisible{
-    display:none;
-}
-
+/** Style du bouton Ajouter spécifique à cette page **/
 .Ajouter{
-    display: flex;
-    border-radius: 3px;
-    border: 2px solid #04acc6;
-    background-color: #09c5e1;
-    padding: 10px;
-    color: white;
     gap: 10px;
     position: relative;
     left: 65%;
 }
 
 
-/** CSS pour formulaire d'ajout des infos du marégraphe **/
-.fond_form{
-    display: none;
-    position: fixed; /* Positionné par rapport à la fenêtre */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    justify-content: center;
-    align-items: center;
+
+
+
+
+.form{
+    margin-top: 5%;
 }
 
-#hide_form_add{
-    display:none;
-}
 
-.form_add_mare {
+.form_modif{
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -55,7 +25,6 @@
     margin-left: 35%;
     position: relative;
 }
-
 /************************************************************/
 
 /* Bouton pour fermer le modal */
@@ -117,68 +86,9 @@ table, td, th {
     
 }
 
-.lignes_a_colorer:nth-child(odd) {
-    background-color: #F0F0F0; /* Gris clair */
-}
-
-  /* Colorie les lignes impaires en blanc */
-.lignes_a_colorer:nth-child(even) {
-    background-color: white; /* Blanc */
-}
-
-.lignes_a_colorer:hover{
-    background-color: lightgray;
-}
-
-.acceder, .editer{
-    background-color: white;
-    color: black;
-    display: inline-block;
-    border-radius: 6px;
-    border-color: #C4C3C3;
-    text-align: center;
-    font-size: 14px;
-    padding: 10px;
-    width: 100px;
-    cursor: pointer;
-    margin: 2.5px;
-    border: 2px solid #C4C3C3;
-    text-decoration: none;
-}
-
-.acceder > a{
-    text-decoration: none;
-}
 
 
-/** CSS pour formulaire de modification des infos du marégraphe **/
 
-.fond_form_modif {
-    display: none;
-    position: fixed; /* Positionné par rapport à la fenêtre */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    justify-content: center;
-    align-items: center;
-}
-
-#hide_form_modif{
-    display:none;
-}
-
-.form_modif_mare {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    margin-top: 5%;
-    margin-left: 35%;
-    position: relative;
-}
 
 
 /******************************************************************/
