--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -12,8 +12,8 @@
   <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_maregraphe()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter un marégraphe</button>
 
   <div class="fond_form" id="hide_form_add">
-    <div class="form_add_mare">
-      <span class="close-button" (click)="annuler_add()">&times;</span>
+    <div class="form">
+      <span class="close-button" (click)="annuler()">&times;</span>
       <h2>Ajouter un marégraphe</h2>
       <form [formGroup]="formAddMaregraphe">
         <label for="ville">Ville : </label>
@@ -30,7 +30,7 @@
       </form>
       <div class="bouton">
         <button class="ajout_mare"  type="submit" (click)="addMaregraphe()">Créer</button>
-        <button class="supp_mare" id="supp_mare" type="delete"  (click)="annuler_add()">Annuler</button>
+        <button class="supp_mare" id="supp_mare" type="delete"  (click)="annuler()">Annuler</button>
       </div>
     </div>
   </div>
@@ -55,33 +55,26 @@
         <td>
           <div class="bouton">
             <a href="tabMaregrapheMeta/{{i.id_tdb}}/{{i.libelle}}"><button class="acceder" type="button">Accéder</button></a>
-
-<!-------------------- Formulaire de modification d'un marégraphe -------------------->
-
             <button class="editer" type="button" (click)="show_modif_maregraphe(i.id_tdb, i.libelle, i.latitude, i.longitude)">Editer</button>
+            <button class="supprimer" type="button" (click)="deleteMaregraphe(i.id_tdb)">Supprimer</button>
           </div>
-
-          
-          
-          
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+
+<!-------------------- Formulaire de modification d'un marégraphe -------------------->
 <div class="fond_form" id="hide_form_modif">
-            
-  <div class="form_modif_mare">
-    
+  <div class="form">
     <span class="close-button" (click)="annuler_modif()">&times;</span>
-    <h2>Modifier les informations du marégraphe</h2>
-
-    <form [formGroup]="formModifMaregraphe">    
-      <label for="id_maregraphe">Identifiant du marégraphe : </label>
-      <input type="number" id="id_maregraphe" readonly="readonly" formControlName="id_maregraphe"><br><br>
-
+    <h2>Mettre à jour les informations du marégraphe</h2>
+    <form [formGroup]="formModifMaregraphe">
       <label for="ville">Ville : </label>
       <input type="text" id="ville" formControlName="ville"><br><br>
+
+      <label for="id_maregraphe">Identifiant du marégraphe : </label>
+      <input type="text" id="id_maregraphe" formControlName="id_maregraphe"><br><br>
 
       <label for="latitude">Latitude : </label>
       <input type="number" id="latitude" formControlName="latitude"><br><br>
@@ -90,9 +83,8 @@
       <input type="number" id="longitude" formControlName="longitude"><br><br>
     </form>
     <div class="bouton">
-      <button class="ajout_mare"  type="submit" (click)="update_maregraphe()">Mettre à jour</button>
+      <button class="ajout_mare"  type="submit" (click)="update_maregraphe()">Modifier</button>
       <button class="supp_mare" id="supp_mare" type="delete"  (click)="annuler_modif()">Annuler</button>
     </div>
-<!---------------------------------------------------------------------------->     
-  </div>              
+  </div>
 </div>
