--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
@@ -1,65 +1,40 @@
-.rectangle{
-    background-color: #E2DDDD;
-    padding-left: 1%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    border-radius: 3px;
-    font-size: 25px;
-}
-
-.affiche{
-    display: block;
-}
-
-.invisible{
-    display:none;
-}
-
-.infos_maregraphe{
-    text-align: center;
-    font-size: 25px;
-}
 
 
-.Ajouter{
-    display: flex;
-    border-radius: 3px;
-    border: 2px solid #04acc6;
-    background-color: #09c5e1;
-    padding: 10px;
-    color: white;
-    gap: 10px;
-}
 
-.fond_form {
-    display: none;
-    position: fixed; /* Positionné par rapport à la fenêtre */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    justify-content: center;
-    align-items: center;
-}
+
+
+
 
 #hide_form{
     display:none;
 }
 
-#show_form{
-    display: flex;
-}
+
 .form_add_meta {
-    transform: scale(1.5);
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     width: 400px;
-    margin-top: 13%;
+    margin-top: 7%;
     margin-left: 35%;
     position: relative;
+}
+
+/* Style ajouté aux zones de saisie des formulaire */
+input, select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+input:focus, select:focus {
+    border: 3px solid #555;
 }
 
 /* Bouton pour fermer le modal */
