--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -9,8 +9,8 @@
    </div>
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
     <div class="entete_page">
-      <p class="infos_maregraphe">Identifiant du marégraphe : {{id_maregraphe}}</p>
-      <p class="infos_maregraphe">Ville : {{ville_maregraphe}}</p>
+      <p class="infos_page">Identifiant du marégraphe : {{id_maregraphe}}</p>
+      <p class="infos_page">Ville : {{ville_maregraphe}}</p>
       <div class="button_header">
         <a href="tabChoixMaregraphe"><button class="bouton_retour">Retour</button></a>
         <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
@@ -67,3 +67,4 @@
       </tbody>
     </table>
    </div>
+
