--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.css
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.css
@@ -1,58 +1,12 @@
-.rectangle{
-    background-color: #E2DDDD;
-    padding-left: 1%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    border-radius: 3px;
-    font-size: 25px;
-}
-
-.affiche{
-    display: block;
-}
-
-.invisible{
-    display:none;
-}
-
+/** Style du bouton Ajouter spécifique à cette page **/
 .Ajouter{
-    display: flex;
-    border-radius: 3px;
-    border: 2px solid #04acc6;
-    background-color: #09c5e1;
-    padding: 10px;
-    color: white;
-    gap: 10px;
     position: relative;
     left: 65%;
 }
 
-/** CSS pour formulaire d'ajout des infos de la métadonnée **/
-.fond_form {
-    display: none;
-    position: fixed; /* Positionné par rapport à la fenêtre */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    justify-content: center;
-    align-items: center;
-}
 
-#hide_form_add{
-    display:none;
-}
-
-.form_meta {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
+.form{
     margin-top: 7%;
-    margin-left: 35%;
-    position: relative;
 }
 
 /************************************************************/
@@ -174,9 +128,7 @@ caption{
 
 /**Formulaire de modification de la métadonnée*/
 
-#hide_form_modif{
-    display:none;
-}
+
 
 
 
