ajout edition meta maregraphe

--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -56,7 +56,7 @@
           <div class="bouton">
             <a href="tabMaregrapheMeta/{{i.id_tdb}}/{{i.libelle}}"><button class="acceder" type="button">Accéder</button></a>
             <button class="editer" type="button" (click)="show_modif_maregraphe(i.id_tdb, i.libelle, i.latitude, i.longitude)">Editer</button>
-            <button class="supprimer" type="button" (click)="deleteMaregraphe(i.id_tdb)">Supprimer</button>
+            <button class="Supprimer" type="button" (click)="deleteMaregraphe(i.id_tdb)">Supprimer</button>
           </div>
         </td>
       </tr>
