--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
@@ -63,7 +63,7 @@
   <div class="form">
     
     <span class="close-button">&times;</span>
-    <h2>Modifier les informations du marégraphe</h2>
+    <h2>Modifier les informations de la métadonnée</h2>
 
     <form [formGroup]="formModifMeta">
       <label for="idMeta">ID métadonnée : </label>
