--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
@@ -1,7 +1,8 @@
 
 
-
-
+.form{
+    margin-top: 7%;
+}
 
 
 
@@ -10,16 +11,7 @@
 }
 
 
-.form_add_meta {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    margin-top: 7%;
-    margin-left: 35%;
-    position: relative;
-}
+
 
 /* Style ajouté aux zones de saisie des formulaire */
 input, select {
