--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -17,14 +17,8 @@
       </div>
 
     </div>
- 
-        
-
-    
-    
-
-    <div class="fond_form" id="hide_form">
-      <div class="form_add_meta">
+    <div class="fond_form" id="hide_form_add">
+      <div class="form">
         <span class="close-button" (click)="annuler()">&times;</span>
         <h2>Ajouter une métadonnée</h2>
         <form [formGroup]="formAddMeta">
@@ -59,12 +53,33 @@
           <td>{{i.date_donnee}}</td>
           <td>
             <div class="bouton">
-              <button class="Editer"  type="button">Editer</button>
-              <button class="Supprimer" type="button" (click)="deleteMeta(i.id_maregraphe, i.id_meta)">Supprimer</button>
+              <button class="Editer"  type="button" (click)="show_modif_form(i.id_meta, i.donnee)">Editer</button>
+              <button class="Supprimer" type="button" (click)="deleteMeta(i.id_maregraphe,i.id_meta)">Supprimer</button>
             </div>
           </td>
         </tr>
       </tbody>
     </table>
+    <div class="fond_form" id="hide_form_modif">
+              
+      <div class="form">
+        
+        <span class="close-button">&times;</span>
+        <h2>Modifier les informations de la métadonnée</h2>
+    
+        <form [formGroup]="formModifMeta">
+          <label for="idMeta">ID métadonnée : </label>
+          <input type="text" id="idMeta" readonly="True" formControlName="id_meta"><br><br>
+    
+          <label for="description">Description : </label>
+          <input type="text" id="description" formControlName="donnee"><br><br>
+        </form>
+        <div class="bouton">
+          <button class="ajout_meta"  type="submit" (click)="updateMetaMare()">Modifier</button>
+          <button class="supp_meta" id="supp_meta" type="delete" (click)="hideForm()">Annuler</button>
+        </div>
+    <!---------------------------------------------------------------------------->     
+      </div>              
+    </div>
    </div>
 
