id_maregraphe readonly

--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -74,7 +74,7 @@
       <input type="text" id="ville" formControlName="ville"><br><br>
 
       <label for="id_maregraphe">Identifiant du marégraphe : </label>
-      <input type="text" id="id_maregraphe" formControlName="id_maregraphe"><br><br>
+      <input type="text" id="id_maregraphe" formControlName="id_maregraphe" readonly="readonly"><br><br>
 
       <label for="latitude">Latitude : </label>
       <input type="number" id="latitude" formControlName="latitude"><br><br>
